update bai ve nha

--- a/Buoi02/index.html
+++ b/Buoi02/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="banner">
@@ -16,16 +16,61 @@
             <div class="col-2/3">
                 <h1>I’m Rayan Adlrdard <br> <span>Front-end</span> Developer </h1>
                 <div class="description">
-                    Lorem ipsum dolor sit amet cols -al ~/.sshviewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et, volutpat feugiat placerat lobortis. Natoque rutrum semper sed suspendisse nunc lectus.
+                </div>
+                <a href="#" class="button">
+                    <span>Hire me </span>
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M10.7812 7.33312L7.20517 3.75712L8.14784 2.81445L13.3332 7.99979L8.14784 13.1851L7.20517 12.2425L10.7812 8.66645H2.6665V7.33312H10.7812Z" fill="#2B2B2B"/>
-                        </svg>                    
-                </a>
+                        </svg>                        
+                </a>    
             </div>
             <div class="col-1/3">
                 <img src="./image/Your Image 1.png" alt="Hinh dan ong">
             </div>
         </div>
     </div>
-    
+    <div class="bg py-20">
+        <div class="container">
+            <h2 class="myservice-title py-50">My services</h2>
+            <p class="myservice-description py-20">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto cupiditate consectetur atque labore? Sequi accusamus necessitatibus velit vitae commodi eveniet consequatur consectetur? Vel id rem voluptates odit ut, illum quasi?
+            </p>
+            <div class="row">
+                    <div class="box">
+                        <img src="./image/coding.png"alt="coding" class="center">             
+                        <h4 class="box-name">web development</h4>
+                        <p class="box-meta">blog, e-commerce</p>
+                    </div>
+                    <div class="box">
+                        <img src="./image/illustration.png"alt="coding" class="center">             
+                        <h4 class="box-name">uI/uX design</h4>
+                        <p class="box-meta">Mobile app, website design</p>
+                    </div>
+                    <div class="box">
+                        <img src="./image/Microphone.png"alt="coding" class="center">             
+                        <h4 class="box-name">sound design</h4>
+                        <p class="box-meta">Voice Over, Beat Making</p>
+                    </div>
+            </div>
+            <div class="row pyb-50">
+                <div class="box">
+                    <img src="./image/coding.png"alt="coding" class="center">             
+                    <h4 class="box-name">web development</h4>
+                    <p class="box-meta">blog, e-commerce</p>
+                </div>
+                <div class="box">
+                    <img src="./image/coding.png"alt="coding" class="center">             
+                    <h4 class="box-name">web development</h4>
+                    <p class="box-meta">blog, e-commerce</p>
+                </div>
+                <div class="box">
+                    <img src="./image/coding.png"alt="coding" class="center">             
+                    <h4 class="box-name">web development</h4>
+                    <p class="box-meta">blog, e-commerce</p>
+                </div>
+        </div>
+        </div>
+    </div>
 </body>
 </html>
