--- a/elementery/tailwindcss/index.html
+++ b/elementery/tailwindcss/index.html
@@ -52,8 +52,8 @@
     <section class="container flex-col items-center py-20 mt-20 ">
         <div class="container sm:w-3/4 lg:flex-row mx-auto px-2">
             <h2 class="text-2xl md:text-3xl lg:text-4xl text-center font-bold mb-6">Our services</h2>
-            <hr class="container w-12 h-3 mb-6">
-            <p class="text-center text-quinnio-gray font-light mb-6">
+            <div class="h-0.5 w-14 bg-gray-800 mx-auto mb-6"></div>
+            <p class="text-center text-quinnio-gray font-light mb-6 mx-auto">
                 We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health
             </p>
         </div>
@@ -106,6 +106,86 @@
             <a class="px-10 py-3 rounded-full border-2 border-quinnio-blue text-quinnio-blue" href="#">Learn more</a>
         </div>
     </section>
-    
+    <!-- Leading healthcare providers -->
+    <section>
+        <div class="container flex flex-col-reverse lg:flex-row items-center gap-12 mt-20">
+            <!-- Image-->
+            <div class="flex justify-center flex-1 mb-10 md:mb-16 lg:mb-0 z-20">
+                <img class="" src="./images/pic_2.png" alt="pic 2">
+            </div>
+            <!-- Content-->
+            <div class="flex flex-1 flex-col items-center lg:items-start ">
+                <h2 class="text-2xl md:text-3xl lg:text-4xl text-center lg:text-left mb-6 font-bold"> Leading healthcare providers</h2>
+                <div class="h-0.5 w-14 bg-gray-800 mb-6"></div>
+                <p class="text-lg text-center lg:text-left  text-quinnio-gray mb-8 font-light">
+                    Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone. To us, it’s not just work. We take pride 
+                    in the solutions we deliver
+                </p>
+                <div class="flex justify-center">
+                    <a class="px-10 py-3 rounded-full border-2 border-quinnio-blue text-quinnio-blue" href="#">Learn more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Download our mobile apps -->
+    <section>
+        <div class="container flex flex-col lg:flex-row items-center gap-12 mt-64">
+            <!-- Content-->
+            <div class="flex flex-1 flex-col items-center lg:items-start ">
+                <h2 class="text-2xl md:text-3xl lg:text-4xl text-center lg:text-left mb-6 font-bold"> Download our 
+                    mobile apps</h2>
+                <div class="h-0.5 w-14 bg-gray-800 mb-6"></div>
+                <p class="text-lg text-center lg:text-left  text-quinnio-gray mb-8 font-light">
+                    Our dedicated patient engagement app and 
+                    web portal allow you to access information instantaneously (no tedeous form, long calls, 
+                    or administrative hassle) and securely
+                </p>
+                <div class="flex justify-center">
+                    <a class="px-8 py-3 rounded-full border-2 border-quinnio-blue text-quinnio-blue inline-flex items-center gap-3" href="#">
+                        <span>
+                        Download
+                        </span> 
+                        <svg class="fill-current w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M4.81951 1.05554L4.81951 12.6308L2.27646 10.0877C1.92569 9.73698 1.39954 9.73698 1.04878 10.0877C0.698014 10.4385 0.698014 10.9647 1.04878 11.3154L5.08258 15.3492C5.43335 15.7 5.95949 15.7 6.31026 15.3492L10.3441 11.3154C10.6948 10.9647 10.6948 10.4385 10.3441 10.0877C9.9933 9.73698 9.46715 9.73698 9.11638 10.0877L6.57333 12.6308L6.57333 1.05554C6.57333 0.617083 6.22257 0.178627 5.69642 0.178627C5.17027 0.178627 4.81951 0.617083 4.81951 1.05554Z" class="fill-current"/>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+            <!-- Image-->
+            <div class="flex justify-center flex-1 mb-10 md:mb-16 lg:mb-0 z-20">
+                <img class="" src="./images/pic_3.png" alt="pic 3">
+            </div>
+        </div>
+    </section>
+    <!-- Testimonials -->
+    <section>
+        <div class="bg-gradient-to-bl from-color-1 to-color-2 w-9/12 h-auto mx-auto p-14 mt-64 rounded-3xl">
+            <div class="container sm:w-3/4 lg:flex-row mx-auto px-2">
+                <h2 class="text-2xl md:text-3xl lg:text-4xl text-center font-bold mb-6 text-quinnio-white">What our customer are saying</h2>
+                <div class="h-0.5 w-14 bg-quinnio-white mx-auto mb-6"></div>
+            </div>
+            <div class="flex items-center md:items-start flex-col md:flex-row justify-center gap-24 mt-12">
+                <div class="flex flex-row gap-6">
+                    <a href="#" class="block relative">
+                        <img alt="profil" src="./images/image1.png" class="mx-auto object-cover border-solid border-2 rounded-full h-40 w-40 "/>
+                    </a>
+                    <div class="my-auto">
+                        <h2 class="text-quinnio-white font-bold text-xl">Edward Newgate</h2>
+                        <h3 class="text-quinnio-white font-light text-lg">Founder Circle</h3>
+                    </div>
+                </div>
+                <div class="w-1/2 my-auto">
+                    <p class="text-quinnio-white font-Mulish font-light text-lg ">
+                        <span class="font-bold text-indigo-500">
+                            “
+                        </span>
+                        To get social media testimonials like these, keep your customers engaged with your social media accounts by posting regularly yourself
+                        <span class="font-bold text-indigo-500">
+                            ”
+                        </span>
+                    </p>
+                </div>
+        </div>
+    </section>
 </body>
 </html>
