--- a/elementery/tailwindcss/index.html
+++ b/elementery/tailwindcss/index.html
@@ -187,5 +187,66 @@
                 </div>
         </div>
     </section>
+        <!-- News -->
+        <section class="container flex-col items-center py-20 mt-20 ">
+            <div class="container sm:w-3/4 lg:flex-row mx-auto px-2">
+                <h2 class="text-2xl md:text-3xl lg:text-4xl text-center font-bold mb-6">Check out our latest article</h2>
+                <div class="h-0.5 w-14 bg-gray-800 mx-auto mb-6"></div>
+            </div>
+            <div class="container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 max-w-screen-lg mt-20">
+                <div class="flex flex-col rounded-lg shadow-lg">
+                    <div class="flex flex-col items-start max-w-sm rounded-lg overflow-hidden shadow-lg pb-3">
+                        <img src="./images/tintuc1.png" alt="tintuc1">
+                        <div class="px-6 py-4">
+                          <div class="font-bold text-xl mb-2">Mountain</div>
+                          <p class="text-gray-700 text-base mb-3">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.
+                          </p>
+                          <a class="text-quinnio-blue inline-flex gap-3 items-center"href="#"> <span>Readmore </span>
+                            <svg width="15" height="9" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1.37501 5.30357L11.9822 5.30357L9.65179 7.63393C9.33037 7.95536 9.33037 8.4375 9.65179 8.75893C9.97322 9.08036 10.4554 9.08036 10.7768 8.75893L14.4732 5.0625C14.7947 4.74107 14.7947 4.25893 14.4732 3.9375L10.7768 0.241071C10.4554 -0.0803579 9.97322 -0.080358 9.65179 0.241071C9.33037 0.5625 9.33037 1.04464 9.65179 1.36607L11.9822 3.69643L1.37501 3.69643C0.973222 3.69643 0.571436 4.01786 0.571436 4.5C0.571436 4.98214 0.973222 5.30357 1.37501 5.30357Z" fill="#4089ED"/>
+                                </svg>                                
+                          </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex flex-col rounded-lg shadow-lg">
+                    <div class="flex flex-col items-start max-w-sm rounded-lg overflow-hidden shadow-lg pb-3">
+                        <img src="./images/tintuc1.png" alt="tintuc1">
+                        <div class="px-6 py-4">
+                          <div class="font-bold text-xl mb-2">Mountain</div>
+                          <p class="text-gray-700 text-base mb-3">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.
+                          </p>
+                          <a class="text-quinnio-blue inline-flex gap-3 items-center"href="#"> <span>Readmore </span>
+                            <svg width="15" height="9" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1.37501 5.30357L11.9822 5.30357L9.65179 7.63393C9.33037 7.95536 9.33037 8.4375 9.65179 8.75893C9.97322 9.08036 10.4554 9.08036 10.7768 8.75893L14.4732 5.0625C14.7947 4.74107 14.7947 4.25893 14.4732 3.9375L10.7768 0.241071C10.4554 -0.0803579 9.97322 -0.080358 9.65179 0.241071C9.33037 0.5625 9.33037 1.04464 9.65179 1.36607L11.9822 3.69643L1.37501 3.69643C0.973222 3.69643 0.571436 4.01786 0.571436 4.5C0.571436 4.98214 0.973222 5.30357 1.37501 5.30357Z" fill="#4089ED"/>
+                                </svg>                                
+                          </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex flex-col rounded-lg shadow-lg">
+                    <div class="flex flex-col items-start max-w-sm rounded-lg overflow-hidden shadow-lg pb-3">
+                        <img src="./images/tintuc1.png" alt="tintuc1">
+                        <div class="px-6 py-4">
+                          <div class="font-bold text-xl mb-2">Mountain</div>
+                          <p class="text-gray-700 text-base mb-3">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.
+                          </p>
+                          <a class="text-quinnio-blue inline-flex gap-3 items-center"href="#"> <span>Readmore </span>
+                            <svg width="15" height="9" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1.37501 5.30357L11.9822 5.30357L9.65179 7.63393C9.33037 7.95536 9.33037 8.4375 9.65179 8.75893C9.97322 9.08036 10.4554 9.08036 10.7768 8.75893L14.4732 5.0625C14.7947 4.74107 14.7947 4.25893 14.4732 3.9375L10.7768 0.241071C10.4554 -0.0803579 9.97322 -0.080358 9.65179 0.241071C9.33037 0.5625 9.33037 1.04464 9.65179 1.36607L11.9822 3.69643L1.37501 3.69643C0.973222 3.69643 0.571436 4.01786 0.571436 4.5C0.571436 4.98214 0.973222 5.30357 1.37501 5.30357Z" fill="#4089ED"/>
+                                </svg>                                
+                          </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="flex justify-center mt-16">
+                <a class="px-10 py-3 rounded-full border-2 border-quinnio-blue text-quinnio-blue" href="#">Learn more</a>
+            </div>
+        </section>
+    </section>
 </body>
 </html>
